--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5da7a383-f558-4fcb-8046-bd5651800853",
    "metadata": {},
    "outputs": [],
    "source": [
     "#%pip install -qU langchain-groq langchain-mistralai\n",
     "#%pip install langchain-experimental\n",
-    "#%pip install psycopg2"
+    "#%pip install psycopg2\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "2312bd97-fc2d-4004-b953-e37f8a788cb7",
+   "metadata": {},
+   "source": [
+    "#Import statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "76f78c1e-cfa0-4692-8c5e-67354e6e957d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +30,8 @@
     "from langchain.sql_database import SQLDatabase\n",
     "from langchain_experimental.sql import SQLDatabaseChain\n",
     "from langchain_groq import ChatGroq\n",
-    "from langchain.agents.agent_toolkits import SQLDatabaseToolkit\n",
+    "#from langchain.agents.agent_toolkits import SQLDatabaseToolkit\n",
+    "from toolkit import SQLDatabaseToolkit\n",
     "from langchain.agents import create_sql_agent\n",
     "from langchain.agents import AgentExecutor\n",
     "import getpass\n",
@@ -32,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10799846-9b0b-47da-a339-b16cdcbd0f84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\internship\\Automatic-Email-Reply-System-for-Film-Equipment-Rental-Service\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "os.environ[\"GROQ_API_KEY\"] =\"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\"\n",
@@ -64,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "672f2214-28d6-49f2-afb0-b2d70b6d1513",
    "metadata": {},
    "outputs": [],
@@ -74,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "72f7d39d-9e64-4b3b-b195-f41551b5ad5c",
    "metadata": {},
    "outputs": [],
@@ -84,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "08cabac6-bc64-4021-932c-e8776c1d48fc",
    "metadata": {},
    "outputs": [],
@@ -118,16 +136,34 @@
     "\n",
     "# Specify the file path\n",
     "file_path = 'emails.txt'\n",
-    "emails = extract_emails(file_path)\n",
-    "emails"
+    "emails = extract_emails(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "58971b95-2033-4939-afef-46e6dfb38385",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"'positive_customer_feedback'\",\n",
+       " \"'inquiry'\",\n",
+       " \"'Assistance_Request_Handling'\",\n",
+       " \"'inquiry'\",\n",
+       " \"'Assistance_Request_Handling'\",\n",
+       " \"'Assistance_Request_Handling'\",\n",
+       " \"'inquiry'\",\n",
+       " \"'positive_customer_feedback'\",\n",
+       " \"'Assistance_Request_Handling'\"]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Categorize EMAIL\n",
     "prompt = PromptTemplate(\n",
@@ -169,10 +205,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50e57e02-979f-4bc8-8e1d-7bc88dad4d6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\internship\\Automatic-Email-Reply-System-for-Film-Equipment-Rental-Service\\.venv\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SQL Agent Executor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mAction: sql\\_db\\_list\\_tables\n",
+      "Action Input: \"\"\u001b[0m\u001b[38;5;200m\u001b[1;3mequipment\u001b[0m\u001b[32;1m\u001b[1;3mI should query the schema of the equipment table to see what columns are available.\n",
+      "Action: sql\\_db\\_schema\n",
+      "Action Input: equipment\u001b[0m\u001b[33;1m\u001b[1;3m\n",
+      "CREATE TABLE equipment (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tname VARCHAR(255), \n",
+      "\tavailable BOOLEAN, \n",
+      "\tprice NUMERIC, \n",
+      "\tCONSTRAINT equipment_pkey PRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from equipment table:\n",
+      "id\tname\tavailable\tprice\n",
+      "1\tRED Komodo 6K Camera\tTrue\t200.00\n",
+      "2\tSony A7s III\tFalse\t150.00\n",
+      "3\tArri Alexa Mini\tTrue\t300.00\n",
+      "*/\u001b[0m\u001b[32;1m\u001b[1;3mThe question asks for the name of the person to contact regarding a partnership opportunity. However, this information is not available in the equipment table. I don't know the answer to this question.\n",
+      "\n",
+      "Final Answer: I don't know.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SQL Agent Executor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mAction: sql\\_db\\_list\\_tables\n",
+      "Action Input: \"\"\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mequipment\u001b[0m\u001b[32;1m\u001b[1;3mI now know the name of a table that might be relevant to the question. I should query the schema of this table to see what columns it has.\n",
+      "Action: sql\\_db\\_schema\n",
+      "Action Input: equipment\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m\n",
+      "CREATE TABLE equipment (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tname VARCHAR(255), \n",
+      "\tavailable BOOLEAN, \n",
+      "\tprice NUMERIC, \n",
+      "\tCONSTRAINT equipment_pkey PRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from equipment table:\n",
+      "id\tname\tavailable\tprice\n",
+      "1\tRED Komodo 6K Camera\tTrue\t200.00\n",
+      "2\tSony A7s III\tFalse\t150.00\n",
+      "3\tArri Alexa Mini\tTrue\t300.00\n",
+      "*/\u001b[0m\u001b[32;1m\u001b[1;3mI now know the schema of the equipment table, which has the necessary columns to answer the question. I should construct a query to check if the RED Komodo 6K Camera is available that coming weekend and get its pricing.\n",
+      "\n",
+      "Action: sql\\_db\\_query\n",
+      "\n",
+      "Action Input: SELECT name, available, price FROM equipment WHERE name = 'RED Komodo 6K Camera' AND available = TRUE;\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[('RED Komodo 6K Camera', True, Decimal('200.00'))]\u001b[0m\u001b[32;1m\u001b[1;3mI now know the final answer\n",
+      "Final Answer: Yes, the RED Komodo 6K Camera is available for rent and it costs $200.00.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SQL Agent Executor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mAction: sql\\_db\\_list\\_tables\n",
+      "Action Input: \"\"\u001b[0m\u001b[38;5;200m\u001b[1;3mequipment\u001b[0m\u001b[32;1m\u001b[1;3mI know that the equipment table exists in the database. Now I should query the schema of this table to see what columns are available.\n",
+      "Action: sql\\_db\\_schema\n",
+      "Action Input: equipment\u001b[0m\u001b[33;1m\u001b[1;3m\n",
+      "CREATE TABLE equipment (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tname VARCHAR(255), \n",
+      "\tavailable BOOLEAN, \n",
+      "\tprice NUMERIC, \n",
+      "\tCONSTRAINT equipment_pkey PRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from equipment table:\n",
+      "id\tname\tavailable\tprice\n",
+      "1\tRED Komodo 6K Camera\tTrue\t200.00\n",
+      "2\tSony A7s III\tFalse\t150.00\n",
+      "3\tArri Alexa Mini\tTrue\t300.00\n",
+      "*/\u001b[0m\u001b[32;1m\u001b[1;3mI now know the final answer\n",
+      "Final Answer: The Sony A7s III is not available for rent at the moment. However, I can provide you with the rates for it in case it becomes available. The two-week rental rate for the Sony A7s III is $150.00.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "Results have been written to output_results.txt\n"
+     ]
+    }
+   ],
    "source": [
     "Email_Writer_Agent = PromptTemplate(\n",
     "            template=\"\"\"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
@@ -205,49 +340,27 @@
     "\n",
     "write_email = Email_Writer_Agent | llm | StrOutputParser()\n",
     "\n",
-    "for i in range(len(emails)):\n",
-    "    if result[i] == \"'inquiry'\":\n",
-    "        out = agent_executor.run(emails[i])\n",
-    "        print(write_email.invoke({\"initial_email\": emails[i],\"email_category\":result[i], \"out\":str(out)}))\n",
-    "    elif result[i] == \"'positive_customer_feedback'\" or result[i] == \"'negative_customer_feedback'\" or result[i] ==\"'off_topic'\" :\n",
-    "        print(write_email.invoke({\"initial_email\": emails[i],\"email_category\":result[i], \"out\":\"None\"}))\n",
-    "    else:\n",
-    "        print(\"wip\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4e12543f-72da-49fa-9373-684c9a2fbac9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.prompts.base import BasePromptTemplate\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a986d3cd-e373-4d5b-bffd-bdcc29dc0000",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'langchain_core.prompts.base.BasePromptTemplate'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(BasePromptTemplate)"
+    "# Open a file in write mode\n",
+    "output_file_path = 'output_results.txt'\n",
+    "with open(output_file_path, 'w') as file:\n",
+    "    for i in range(len(emails)):\n",
+    "        if result[i] == \"'inquiry'\":\n",
+    "            out = agent_executor.run(emails[i])\n",
+    "            response = write_email.invoke({\"initial_email\": emails[i], \"email_category\": result[i], \"out\": str(out)})\n",
+    "            file.write(f\"Email: {emails[i]}\\nCategory: {result[i]}\\nResponse: {response}\\n-----\\n\")\n",
+    "        elif result[i] in [\"'positive_customer_feedback'\", \"'negative_customer_feedback'\", \"'off_topic'\"]:\n",
+    "            response = write_email.invoke({\"initial_email\": emails[i], \"email_category\": result[i], \"out\": \"None\"})\n",
+    "            file.write(f\"Email: {emails[i]}\\nCategory: {result[i]}\\nResponse: {response}\\n-----\\n\")\n",
+    "        else:\n",
+    "            file.write(f\"Email: {emails[i]}\\nCategory: {result[i]}\\nResponse: wip\\n-----\\n\")\n",
+    "\n",
+    "print(f\"Results have been written to {output_file_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09ff703-bee3-46fe-9cc6-e7ec75dce0f5",
+   "id": "89ef99c2-99e9-4a97-8ae3-6719caf873a7",
    "metadata": {},
    "outputs": [],
    "source": []
